--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,6 +21,7 @@ header .headerWrap {
 header .headerWrap .logo {
   height: 80%;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
@@ -32,7 +33,7 @@ header .headerWrap .logo img {
 header .headerWrap .navbar {
   width: 100%;
   height: 25%;
-  background-color: #B1D281;
+  background: #B1D281;
 }
 
 header .headerWrap .navbar nav {
@@ -40,6 +41,7 @@ header .headerWrap .navbar nav {
   height: 100%;
   margin: auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
 }
@@ -52,6 +54,7 @@ header .headerWrap .navbar nav a {
   font-weight: 600;
 }
 
+header .headerWrap .navbar nav a.active,
 header .headerWrap .navbar nav a:hover {
   margin-bottom: -5px;
   color: #002D75;
@@ -59,17 +62,92 @@ header .headerWrap .navbar nav a:hover {
 }
 
 main {
+  background-image: url("/img/fondo-pag-speciali.jpg");
   width: 100%;
 }
 
-main .pasteLunghe {
+main h2 {
+  color: #002D75;
+  text-shadow: 3px 3px white;
+  text-align: center;
+  font-size: 2.5rem;
+  padding: 20px 0;
+  text-transform: uppercase;
+}
+
+main .pasteLunghe,
+main .pasteCorte,
+main .pasteCortissime {
+  width: 90%;
+  margin: auto;
   display: flex;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
 }
 
-main .pasteLunghe img {
-  width: 400px;
+main .pasteLunghe .pastaCard,
+main .pasteCorte .pastaCard,
+main .pasteCortissime .pastaCard {
+  position: relative;
+  width: 500px;
+  margin: 30px;
+}
+
+main .pasteLunghe .pastaCard img,
+main .pasteCorte .pastaCard img,
+main .pasteCortissime .pastaCard img {
+  width: 100%;
+  display: block;
+}
+
+main .pasteLunghe .pastaCard .pastaOverlay,
+main .pasteCorte .pastaCard .pastaOverlay,
+main .pasteCortissime .pastaCard .pastaOverlay {
+  height: 70%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+main .pasteLunghe .pastaCard .pastaOverlay img,
+main .pasteCorte .pastaCard .pastaOverlay img,
+main .pasteCortissime .pastaCard .pastaOverlay img {
+  width: 70px;
+}
+
+main .pasteLunghe .pastaCard .pastaOverlay p,
+main .pasteCorte .pastaCard .pastaOverlay p,
+main .pasteCortissime .pastaCard .pastaOverlay p {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+main .pasteLunghe .pastaCard:hover img,
+main .pasteCorte .pastaCard:hover img,
+main .pasteCortissime .pastaCard:hover img {
+  transition: filter 1s;
+  filter: blur(5px);
+}
+
+main .pasteLunghe .pastaCard:hover .pastaOverlay,
+main .pasteCorte .pastaCard:hover .pastaOverlay,
+main .pasteCortissime .pastaCard:hover .pastaOverlay {
+  transition: opacity 1.5s;
+  opacity: 1;
+}
+
+main .pasteLunghe .pastaCard:hover .pastaOverlay img,
+main .pasteCorte .pastaCard:hover .pastaOverlay img,
+main .pasteCortissime .pastaCard:hover .pastaOverlay img {
+  filter: none;
 }
 
