--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,41 +1,31 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
+@import "./partials/common";
+@import "./partials/mixin";
 
 
 header{
   height: 270px;
-  width: 100%;
+  width: $w100;
   .headerWrap{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    width: $w100;
+    height: $w100;
+    @include flex(column, flex-start, center);
     .logo{
-      height: 80%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      height: $w80;
+      @include flex(row, center, center);
       img{
-        height: 100%;
+        height: $w100;
       }
     }
-
     .navbar{
-      width: 100%;
-      height: 25%;
-      background-color: #B1D281;
+      width: $w100;
+      height: $w25;
+      background: $bg_green;
       nav{
         width: 400px;
-        height: 100%;
+        height: $w100;
         margin: auto;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+        @include flex(row, space-around, center);
         a{
           color: white;
           text-transform: uppercase;
@@ -43,28 +33,73 @@ header{
           font-size: 1.2rem;
           font-weight: 600;
         }
-        a:hover{
+        a.active, a:hover{
           margin-bottom: -5px;
-          color: #002D75;
-          border-bottom: 5px solid #002D75;
+          color: $tx_blue;
+          border-bottom: 5px solid $tx_blue;
         }
-
       }
     }
-
   }
-
 }
 
 main{
-  width: 100%;
-  .pasteLunghe{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  background-image: url("/img/fondo-pag-speciali.jpg");
+  width: $w100;
+  h2{
+    color: $tx_blue;
+    text-shadow: 3px 3px white;
+    text-align: center;
+    font-size: 2.5rem;
+    padding: 20px 0;
+    text-transform: uppercase;
+  }
+  .pasteLunghe, .pasteCorte, .pasteCortissime{
+    width: $w90;
+    margin: auto;
+    @include flex(row, flex-start, center);
     flex-wrap: wrap;
-    img{
-      width: 400px;
+    .pastaCard{
+      position: relative;
+      width: 500px;
+      margin: 30px;
+      img{
+        width: $w100;
+        display: block;
+      }
+      .pastaOverlay{
+        height: $w70;
+        width: $w100;
+        @include flex(column, space-around, center);
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        img{
+          width: 70px;
+        }
+        p{
+          font-size: 30px;
+          font-weight: bold;
+        }
+      }
     }
+
+    .pastaCard:hover{
+      img{
+        transition: filter 1s;
+        filter: blur(5px);
+      }
+      .pastaOverlay{
+        transition: opacity 1.5s;
+        opacity: 1;
+        img{
+          filter: none;
+        }
+      }
+    }
+
+
   }
 }
